# dbt-markdoc

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml
dbt_markdoc/: cli.py  main.py
dbt_markdoc/data/templates/: macro.md  model.md  source.md
dbt_markdoc/functions/: manifest_functions.py  markdown_functions.py
dbt_markdoc/models/: standard_manifest.py
dbt_markdoc/templates/: macro.md
tests/: conftest.py  test_manifest_functions.py  test_markdown_functions.py
