[tool.poetry]
name = "dbt-markdoc"
version = "0.1.0"
description = "CLI tool for creating markdown documentation from DBT schema files"
authors = ["Ben Dowling <ben.dowling@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.2"
pydantic = "^1.9.0"
PyYAML = "^6.0"
dbt-core = "^1.0.4"
Jinja2 = "2.11.3"
pyfunctional = "^1.4.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dbt-markdoc = "dbt-markdoc.cli:run"

[tool.black]
line-length = 120
